--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -157,6 +157,20 @@
 
             import { getUser } from "/js/currentLoginUser.js";
 
+            const languageList = {
+                "c#": "/images/languages/c#.png",
+                "c++": "/images/languages/c++.png",
+                "html": "/images/languages/html.png",
+                "java": "/images/languages/java.png",
+                "js": "/images/languages/js.png",
+                "php": "/images/languages/php.png",
+                "python": "/images/languages/python.png",
+                "ruby": "/images/languages/ruby.png",
+                "SQL": "/images/languages/SQL.png",
+                "css" : "/images/languages/css.png",
+                "typescript": "/images/languages/typescript.png"
+            }
+
             console.log(await getUser());
 
             const loginUser = await getUser();
@@ -597,15 +611,15 @@
             const detailMoal = document.querySelector("#project-details");
 
             function formmatDateFromMillisecondForEdit(milliseconds) {
-                var date = new Date(milliseconds);
+                const date = new Date(milliseconds);
 
                 // Get the year, month, and day from the Date object
-                var year = date.getFullYear();
-                var month = String(date.getMonth() + 1).padStart(2, '0'); // Months are 0-indexed, so add 1
-                var day = String(date.getDate()).padStart(2, '0');
+                const year = date.getFullYear();
+                const month = String(date.getMonth() + 1).padStart(2, '0'); // Months are 0-indexed, so add 1
+                const day = String(date.getDate()).padStart(2, '0');
 
                 // Create the formatted date string
-                var formattedDate = year + '-' + month + '-' + day;
+                const formattedDate = year + '-' + month + '-' + day;
 
                 return formattedDate;
             }
@@ -620,6 +634,33 @@
                     document.querySelector(
                         "#project-detail-background"
                     ).innerText = targetData.background;
+
+                    targetData.architectureDto.forEach(a => {
+
+                        const div = document.createElement("div");
+
+                        div.classList.add("d-flex", "gap-2", "align-items-center", "justify-content-center");
+
+                        const image = document.createElement("img");
+
+                        image.style.width = "40px"
+
+                        if (languageList[a.tech_name]) {
+                            image.setAttribute("src", languageList[a.tech_name]);
+                        } else {
+                            // Handle the case where the language is not found in the map
+                            image.setAttribute("src", "/images/languages/default.png");
+                        }
+
+                        div.appendChild(image);
+
+                        const p = document.createElement("p");
+                        p.textContent = a.tech_name;
+                        p.classList.add("fs-6", "fw-bold")
+                        div.appendChild(p);
+
+                        document.querySelector("#architectures-list-in-edit").appendChild(div);
+                    })
 
                     document.querySelector("#project-detail-name").value =
                         targetData.name;
@@ -2107,7 +2148,7 @@
                                                     <input type="number" hidden id="current-edditing-projetc-id">
                                                     <div class="row mb-3">
                                                         <label
-                                                            for="edit-proejct-phase"
+                                                            for="edit-project-phase"
                                                             class="col-md-4 col-lg-3 col-form-label"
                                                             >Current
                                                             Phase</label
@@ -2496,6 +2537,16 @@
                                                         "
                                                         >Save Review</a
                                                     >
+                                                </div>
+                                            </div>
+
+                                            <div
+                                                    class="tab-pane fade pt-3"
+                                                    id="edit-architecture"
+                                            >
+
+                                                <div id="architectures-list-in-edit" class="d-flex gap-2">
+
                                                 </div>
                                             </div>
                                         </div>
