--- a/src/main/resources/templates/project.html
+++ b/src/main/resources/templates/project.html
@@ -250,8 +250,8 @@
                                     name="member-tags"
                                     sec:authorize="hasRole('PROJECT_MANAGER')"
                             />
-                            <div class="mt-2" sec:authorize="hasAnyRole('FOC','EMPLOYEE','CONTRACT')">
-                                <span class="bg-secondary text-white border-0 p-2 rounded-1"
+                            <div class="mt-2" sec:authorize="hasAnyRole('FOC','EMPLOYEE','CONTRACT','PMO','DEPARTMENT_HEAD','SDQC')">
+                                <span class="bg-dark text-white border-0 p-2 rounded-1"
                                       id="assigned-member-span"></span>
                             </div>
                         </div>
@@ -504,20 +504,20 @@
 
     <!-- javascript libraries -->
     <script src="/lib/chart/chart.min.js"></script>
-    <script src="/lib/easing/easing.min.js"></script>
-    <script src="/lib/waypoints/waypoints.min.js"></script>
-    <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="/lib/tempusdominus/js/moment.min.js"></script>
-    <script src="/lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+<!--    <script src="/lib/easing/easing.min.js"></script>-->
+<!--    <script src="/lib/waypoints/waypoints.min.js"></script>-->
+<!--    <script src="/lib/owlcarousel/owl.carousel.min.js"></script>-->
+<!--    <script src="/lib/tempusdominus/js/moment.min.js"></script>-->
+<!--    <script src="/lib/tempusdominus/js/moment-timezone.min.js"></script>-->
+<!--    <script src="/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>-->
     <script src="/lib/quill/quill.min.js"></script>
 
     <!-- toast ui calendar -->
-    <script src="https://uicdn.toast.com/tui.code-snippet/latest/tui-code-snippet.js"></script>
-    <script src="https://uicdn.toast.com/tui.dom/v3.0.0/tui-dom.js"></script>
-    <script src="https://uicdn.toast.com/tui.time-picker/latest/tui-time-picker.min.js"></script>
-    <script src="https://uicdn.toast.com/tui.date-picker/latest/tui-date-picker.min.js"></script>
-    <script src="https://uicdn.toast.com/calendar/latest/toastui-calendar.min.js"></script>
+<!--    <script src="https://uicdn.toast.com/tui.code-snippet/latest/tui-code-snippet.js"></script>-->
+<!--    <script src="https://uicdn.toast.com/tui.dom/v3.0.0/tui-dom.js"></script>-->
+<!--    <script src="https://uicdn.toast.com/tui.time-picker/latest/tui-time-picker.min.js"></script>-->
+<!--    <script src="https://uicdn.toast.com/tui.date-picker/latest/tui-date-picker.min.js"></script>-->
+<!--    <script src="https://uicdn.toast.com/calendar/latest/toastui-calendar.min.js"></script>-->
 
 
 
@@ -531,30 +531,8 @@
     <!--    for assign member-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.2.0/tagify.min.js"></script>
 
-    <script>
-        // ========================== Calendar View ===========================
-        const calendarEl = document.getElementById("calendar");
-
-        const calendar = new FullCalendar.Calendar(calendarEl, {
-            initialView: "dayGridMonth",
-            initialDate: new Date(),
-            headerToolbar: {
-                left: "prev,next today",
-                center: "title",
-                right: "dayGridMonth,timeGridWeek",
-            },
-        });
-
-        calendar.render();
-
-        //dynamically add bg-white class to this element .fc-view-harness
-        const fcViewHarness = document.querySelector(".fc-view-harness");
-        fcViewHarness.classList.add("bg-white");
-    </script>
-
     <script type="module">
         import {getData, sendData} from "/js/api-function.js";
-        import {getTaskList} from '/js/callDataForTask.js';
 
         // Get the project ID from the hidden element
         const projectId = document.getElementById("projectId").innerText;
@@ -699,7 +677,17 @@
             return taskDiv;
         }
 
-        let taskList = await getTaskList()
+        let taskList = [];
+
+        // Fetch the tasks from the backend API
+        $.ajax({
+            url: "/api/task/list/project/" + projectId,
+            type: "GET",
+            async: false,
+            success: function (data) {
+                taskList = data;
+            },
+        });
 
         for (let i = 0; i < taskList.length; i++) {
             const task = taskList[i];
@@ -769,25 +757,29 @@
                 document.getElementById('task-detail-start-date').value = startDateString;
                 document.getElementById('task-detail-due-date').value = endDateString;
 
-                //preselect the tagify
-                const assignedMemberTagify = document.getElementById('assigned-member-tagify'),
-                    tagify = new Tagify(assignedMemberTagify, {
-                        enforceWhitelist: true,
-                        mode: "select",
-                        whitelist: membersList.map((member) => {
-                            return member.name + " | " + member.role;
-                        }),
-                        blacklist: ['foo', 'bar'],
-                    })
+                //preselect the tagify if that element exists
+                const assignedMemberTagifyElement = document.getElementById('assigned-member-tagify');
+                if (assignedMemberTagifyElement) {
+                    const assignedMemberTagify = document.getElementById('assigned-member-tagify'),
+                        tagify = new Tagify(assignedMemberTagify, {
+                            enforceWhitelist: true,
+                            mode: "select",
+                            whitelist: membersList.map((member) => {
+                                return member.name + " | " + member.role;
+                            }),
+                            blacklist: ['foo', 'bar'],
+                        })
 
-                tagify.addTags(currentTaskData.userDto.name + " | " + currentTaskData.userDto.role)
+                    tagify.addTags(currentTaskData.userDto.name + " | " + currentTaskData.userDto.role)
+                }
                 console.log("CURRENT TASK DATA", currentTaskData)
 
                 const assignedMemberSpan = document.getElementById('assigned-member-span')
                 //to check if that element exists
                 if (assignedMemberSpan) {
                     // Check if the user has any of the specified roles
-                    if (assignedMemberSpan.getAttribute('sec:authorize') === 'hasAnyRole(\'FOC\',\'EMPLOYEE\',\'CONTRACT\')') {
+                    if (currentTaskData.userDto.role === 'FOC' || currentTaskData.userDto.role === 'EMPLOYEE' || currentTaskData.userDto.role === 'CONTRACT' || currentTaskData.userDto.role === 'PMO' || currentTaskData.userDto.role === 'DEPARTMENT_HEAD' || currentTaskData.userDto.role === 'SDQC') {
+                        console.log("the user has one of the specified roles")
                         assignedMemberSpan.innerText = currentTaskData.userDto.name + " | " + currentTaskData.userDto.role
                     }
                 }
@@ -806,8 +798,16 @@
                     console.log("the task indeed drop on the one of the three zone")
                     console.log(currentTaskData.status, currentZone.getAttribute("id"))
                     if (currentTaskData.status !== currentZone.getAttribute("id")) {
+                        currentTaskData.status = currentZone.getAttribute("id")
+                        if (currentTaskData.status === 'IN_PROGRESS') {
+                            currentTaskData.actual_start_time = new Date().getTime()
+                        }
+                        if (currentTaskData.status === 'FINISHED') {
+                            currentTaskData.actual_end_time = new Date().getTime()
+                        }
+                        console.log("CURRENT TASK DATA", currentTaskData)
                         sendData(
-                            "/api/task/update",
+                            "/api/task/update/status",
                             "POST",
                             currentTaskData,
                             (error, response) => {
@@ -1023,6 +1023,50 @@
             return closestTask;
         };
 
+        console.log("TASK LIST", taskList)
+
+        //calendar view
+        const calendarEl = document.getElementById("calendar");
+
+        const calendar = new FullCalendar.Calendar(calendarEl, {
+            initialView: "dayGridMonth",
+            initialDate: new Date(),
+            weekends: false,
+            headerToolbar: {
+                left: "prev,next today",
+                center: "title",
+                right: "dayGridMonth,timeGridWeek",
+            },
+            // loop through the taskList and add events to the calendar
+            events : taskList.map((task) => {
+                return {
+                    title: task.title,
+                    start: new Date(task.plan_start_time),
+                    end: new Date(task.plan_end_time),
+                    color: task.status === "TODO" ? "#007bff" : task.status === "IN_PROGRESS" ? "#6c757d" : "#28a745",
+                    textColor: "white",
+                    allDay: true,
+                }
+            })
+        });
+
+        calendar.render();
+
+        //dynamically add bg-white class to this element .fc-view-harness
+        const fcViewHarness = document.querySelector(".fc-view-harness");
+        fcViewHarness.classList.add("bg-white");
+        fcViewHarness.style.height = "600px";
+
+        //dynamically change width of  .fc-col-header
+        const fcColHeader = document.querySelector(".fc-col-header");
+        fcColHeader.style.width = "1000px";
+
+        const fcDayGridBody = document.querySelector(".fc-daygrid-body");
+        fcDayGridBody.style.width = "1000px";
+
+        const fcScrollgridSyncTable = document.querySelector(".fc-scrollgrid-sync-table");
+        fcScrollgridSyncTable.style.width = "1000px";
+        fcScrollgridSyncTable.style.height = "600px";
 
 
         //ADD TASk
@@ -1043,12 +1087,11 @@
                 plan_start_time: new Date($("#start_time").val()).getTime(),
                 plan_end_time: new Date($("#end_time").val()).getTime(),
                 tasksGroup: $("#group").val(),
-                projectDto: {
-                    id: parseInt(projectId)
-                },
-                userDto: {
-                    id: tagData[0]
-                }
+                projectId:
+                    parseInt(projectId)
+                ,
+                userId: tagData[0]
+
             };
             console.log(data);
             $.ajax({
